<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">,</string>
    <string name="stepen">^</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplate">×</string>
    <string name="delit">÷</string>
    <string name="reset">C</string>
    <string name="display">Enter in a value</string>
    <string name="delete">←</string>
    <string name="ravno">=</string>
    <string name="par">()</string>
    <string name="procent">%</string>
    <string name="pi">pi</string>
    <string name="e">e</string>
</resources>