<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button0"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/circle"
        android:onClick="zeroBTN"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonComma"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="pointBTN"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonRavno"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle_green"
        android:onClick="ravnoBTN"
        android:text="@string/ravno"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonComma"
        app:layout_constraintStart_toEndOf="@+id/buttonComma"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_green"
        android:onClick="plusBTN"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRavno"
        app:layout_constraintEnd_toEndOf="@+id/buttonRavno"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_green"
        android:onClick="minusBTN"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_green"
        android:onClick="multiplyBTN"
        android:text="@string/multiplate"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDelit"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_green"
        android:onClick="deliteBTN"
        android:text="@string/delit"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonPar"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_red"
        android:onClick="parBTN"
        android:text="@string/par"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDelit"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelit" />

    <Button
        android:id="@+id/buttonStepen"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_red"
        android:onClick="stepenBTN"
        android:text="@string/stepen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPar"
        app:layout_constraintEnd_toStartOf="@+id/buttonPar" />

    <Button
        android:id="@+id/button13"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_red"
        android:onClick="resetBTN"
        android:text="@string/reset"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStepen"
        app:layout_constraintEnd_toStartOf="@+id/buttonStepen" />

    <Button
        android:id="@+id/button1"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle"
        android:onClick="oneBTN"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@+id/button0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle"
        android:onClick="fourBTN"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="twoBTN"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/button1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        android:onClick="threeBTN"
        android:text="@string/three"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="fiveBTN"
        android:text="@string/five"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="sixBTN"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle"
        android:onClick="sevenBTN"
        android:text="@string/seven"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="eightBTN"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/circle"
        android:onClick="nineBTN"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/circle_orange"
        android:onClick="backspaceBTN"
        android:text="@string/delete"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelit"
        app:layout_constraintEnd_toEndOf="@+id/buttonDelit"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonProcent"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_orange"
        android:onClick="procentBTN"
        android:text="@string/procent"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDelete"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonPi"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_orange"
        android:onClick="piBTN"
        android:text="@string/pi"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonProcent"
        app:layout_constraintEnd_toStartOf="@+id/buttonProcent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/circle_orange"
        android:onClick="eBTN"
        android:text="@string/e"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPi"
        app:layout_constraintEnd_toStartOf="@+id/buttonPi" />


</androidx.constraintlayout.widget.ConstraintLayout>